# Desk-simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
data/: eur_curve.csv  sample_client_request.csv
include/rates/core/: CashFlow.hpp  Date.hpp  DayCount.hpp  Schedule.hpp
include/rates/desk/: HedgeEngine.hpp  PnlEngine.hpp  QuoteEngine.hpp
include/rates/io/: CsvReader.hpp  ReportPrinter.hpp
include/rates/market/: CurvePoint.hpp  MarketData.hpp  YieldCurve.hpp
include/rates/pricing/: Discounting.hpp  RiskCalculator.hpp  SwapPricer.hpp
include/rates/products/: Swap.hpp  SwapLeg.hpp  Trade.hpp
src/core/: CashFlow.cpp  Date.cpp  DayCount.cpp  Schedule.cpp
src/desk/: HedgeEngine.cpp  PnlEngine.cpp  QuoteEngine.cpp
src/io/: CsvReader.cpp  ReportPrinter.cpp
src/market/: MarketData.cpp  YieldCurve.cpp
src/pricing/: Discounting.cpp  RiskCalculator.cpp  SwapPricer.cpp
src/products/: Swap.cpp  SwapLeg.cpp  Trade.cpp
tests/: test_quote_engine.cpp  test_risk.cpp  test_swap_pricer.cpp  test_yield_curve.cpp
